--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -6,7 +6,7 @@
 @inject IJSRuntime JSRuntime
 @inject NavigationManager Navigation
 
-<PageTitle>Pacientes</PageTitle>
+<PageTitle>Lista de Pacientes</PageTitle>
 
 @if (showAlert)
 {
